--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-      "name"            : "sonatajs",
-      "version"         : "0.0.2",
-      "description"     : "Sonata.js is a complex full stack framework for building web applications.",
-      "main"            : "src/index.js",
-      "type"            : "module",
-      "module"          : "ES2022",
+      "name": "sonatajs",
+      "version": "0.0.2",
+      "description": "Sonata.js is a complex full stack framework for building web applications.",
+      "main": "src/index.js",
+      "type": "module",
+      "module": "ES2022",
       "moduleResolution": "node",
       "scripts": {
             "production": "set NODE_ENV=production && tsc",
@@ -18,10 +18,14 @@
             "@types/jest": "^29.5.11",
             "@types/jsdom": "^21.1.6",
             "@types/mysql": "^2.15.24",
-            "@types/node": "^16.18.64",
+            "@types/node": "^16.18.70",
             "@types/ws": "^8.5.10",
             "@types/xmldom": "^0.1.34",
+            "@types/fastify": "^0.1.34",
+            "@types/fastify-websocket": "^0.1.34",
             "crypto": "^1.0.1",
+            "fastify": "^4.25.2",
+            "fastify-websocket": "^4.3.0",
             "jest": "^29.7.0",
             "jsdom": "^23.0.1",
             "mongodb": "^6.3.0",
@@ -30,8 +34,8 @@
             "sharp": "^0.32.6",
             "ts-jest": "^29.1.1",
             "ts-node": "^10.9.1",
-            "typescript": "^4.9.5",
-            "ws": "^7.0.0"
+            "typescript": "^5.3.3",
+            "ws": "^7.5.9"
       },
       "dependencies": {
             "@sendgrid/mail": "^7.4.6",
@@ -53,6 +57,6 @@
                   "ts",
                   "tsx",
                   "js"
-            ]                       
-      }      
+            ]
+      }
 }
