--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,34 @@
 {
       "compilerOptions": {
-            "target"                                  : "ES2022",       /* Specify the ECMAScript target version */
-            "module"                                  : "ES2022",
-            "strict"                                  : true,           /* Enable all strict type-checking options */
-            "esModuleInterop"                         : true,           /* Enable the `--esModuleInterop` flag */
-            "moduleResolution"                        : "node",         /* Specify module resolution strategy */
-            "skipLibCheck"                            : true,           /* Skip type checking of declaration files */
-            "forceConsistentCasingInFileNames"        : true,           /* Ensure that casing is consistent in file names */
-            "outDir"                                  : "./dist",       /* Specify an output directory for compiled files */
-            "rootDir"                                 : "./src",        /* Specify the root directory of input files */
-            "declaration"                             : true,           /* Generate corresponding `.d.ts` file */
-            "sourceMap"                               : true            /* Generate source maps */
+        "target": "ES2022",
+        "module": "ES2022",
+        "strict": true,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "skipLibCheck": false, // Consider type-checking declaration files for strictness
+        "forceConsistentCasingInFileNames": true,
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "declaration": true,
+        "sourceMap": true,
+        "noImplicitAny": true, // Ensure no expressions and variables default to the 'any' type
+        "noImplicitThis": true, // Raise error on 'this' expressions with an implied 'any' type
+        "alwaysStrict": true, // Parse in strict mode and emit "use strict" for each source file
+        "strictNullChecks": true, // Enable strict null checking
+        "strictFunctionTypes": true, // Ensure function parameter types are correctly checked
+        "strictBindCallApply": true, // Enable strict 'bind', 'call', and 'apply' methods on functions
+        "strictPropertyInitialization": true, // Ensure class properties are initialized in the constructor
+        "noImplicitReturns": true, // Report error when not all code paths in function return a value
+        "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
+        "noUncheckedIndexedAccess": true, // Include 'undefined' in index signature results
+        "noUnusedLocals": true, // Report errors on unused locals
+        "noUnusedParameters": true, // Report errors on unused parameters
+        "useUnknownInCatchVariables": true, // Type catch clause variables as 'unknown' instead of 'any'
+        "exactOptionalPropertyTypes": true, // Interpret optional property types as written, rather than adding 'undefined'
+        "noImplicitOverride": true, // Ensure overridden methods explicitly use the 'override' keyword
+        "noPropertyAccessFromIndexSignature": true // Disallow accessing properties on objects with index signatures
       },
-      "include"                                       : [ "src/**/*.ts", "src/sonata/utils/.interfaces.ts"  ],           /* Specify the files to include in compilation */      
-      "exclude"                                       : [ "node_modules" ]           /* Specify the files to exclude from compilation */      
-}
+      "include": ["src/**/*.ts", "src/sonata/utils/.interfaces.ts"],
+      "exclude": ["node_modules"]
+    }
+    
