--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
       "module": "ES2022",
       "moduleResolution": "node",
       "scripts": {
-            "production": "set NODE_ENV=production && tsc",
-            "start": "set NODE_ENV=development && tsc && node dist/index.js",
+            "production": "set NODE_ENV=production && npx tsc",
+            "start": "cls && set NODE_ENV=development && npx tsc && node dist/index.js",
             "dev": "set NODE_ENV=development && tsx src/index.ts",
             "test": "cls && jest"
       },
@@ -33,7 +33,7 @@
             "sharp": "^0.32.6",
             "ts-jest": "^29.1.1",
             "ts-node": "^10.9.1",
-            "typescript": "^5.3.3",
+            "typescript": "^5.4.5",
             "ws": "^7.5.9"
       },
       "dependencies": {
