--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,24 +11,22 @@
         "rootDir": "./src",
         "declaration": true,
         "sourceMap": true,
-        "noImplicitAny": true, // Ensure no expressions and variables default to the 'any' type
-        "noImplicitThis": true, // Raise error on 'this' expressions with an implied 'any' type
+        "noImplicitAny": false, // Ensure no expressions and variables default to the 'any' type
+        "noImplicitThis": false, // Raise error on 'this' expressions with an implied 'any' type
         "alwaysStrict": true, // Parse in strict mode and emit "use strict" for each source file
-        "strictNullChecks": true, // Enable strict null checking
+        "strictNullChecks": false, // Enable strict null checking
         "strictFunctionTypes": true, // Ensure function parameter types are correctly checked
         "strictBindCallApply": true, // Enable strict 'bind', 'call', and 'apply' methods on functions
-        "strictPropertyInitialization": true, // Ensure class properties are initialized in the constructor
         "noImplicitReturns": true, // Report error when not all code paths in function return a value
         "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
         "noUncheckedIndexedAccess": true, // Include 'undefined' in index signature results
-        "noUnusedLocals": true, // Report errors on unused locals
-        "noUnusedParameters": true, // Report errors on unused parameters
+        "noUnusedLocals": false, // Report errors on unused locals
+        "noUnusedParameters": false, // Report errors on unused parameters
         "useUnknownInCatchVariables": true, // Type catch clause variables as 'unknown' instead of 'any'
-        "exactOptionalPropertyTypes": true, // Interpret optional property types as written, rather than adding 'undefined'
-        "noImplicitOverride": true, // Ensure overridden methods explicitly use the 'override' keyword
+                "noImplicitOverride": true, // Ensure overridden methods explicitly use the 'override' keyword
         "noPropertyAccessFromIndexSignature": true // Disallow accessing properties on objects with index signatures
       },
-      "include": ["src/**/*.ts", "src/sonata/utils/.interfaces.ts"],
+      "include": ["src/*.ts", "src/**/*.ts", "src/sonata/utils/.interfaces.ts"],
       "exclude": ["node_modules"]
     }
     
