--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
             "@types/ws": "^8.5.10",
             "@types/xmldom": "^0.1.34",
             "crypto": "^1.0.1",
-            "fastify": "^4.25.2",
+            "fastify": "^4.26.2",
             "fastify-websocket": "^4.3.0",
             "jest": "^29.7.0",
             "jsdom": "^23.0.1",
@@ -37,6 +37,7 @@
             "ws": "^7.5.9"
       },
       "dependencies": {
+            "@fastify/cookie": "^9.3.1",
             "@fortawesome/fontawesome-svg-core": "^6.5.1",
             "@fortawesome/free-brands-svg-icons": "^6.5.1",
             "@fortawesome/free-solid-svg-icons": "^6.5.1",
@@ -46,6 +47,7 @@
             "bcrypt": "^5.1.1",
             "clean-css": "^5.3.3",
             "crypto": "latest",
+            "fastify-cookie": "^5.7.0",
             "fs": "^0.0.1-security",
             "kysely": "^0.27.3",
             "mysql2": "^latest",
