Lets get the upload and clusters going

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
             "@types/twilio": "^3.19.3",
             "bcrypt": "^5.1.1",
             "clean-css": "^5.3.3",
+            "cluster": "^0.7.7",
             "crypto": "latest",
             "fastify-cookie": "^5.7.0",
             "fs": "^0.0.1-security",
