Working on media uploads

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
             "@fortawesome/free-brands-svg-icons": "^6.5.1",
             "@fortawesome/free-solid-svg-icons": "^6.5.1",
             "@sendgrid/mail": "^7.4.6",
+            "@types/file-type": "^10.9.1",
             "@types/mongodb": "^4.0.7",
             "@types/twilio": "^3.19.3",
             "bcrypt": "^5.1.1",
@@ -49,6 +50,7 @@
             "cluster": "^0.7.7",
             "crypto": "latest",
             "fastify-cookie": "^5.7.0",
+            "file-type": "^19.0.0",
             "fs": "^0.0.1-security",
             "kysely": "^0.27.3",
             "mysql2": "^latest",
