Well I got the queue setup. Now to implement the media processing

--- a/package.json
+++ b/package.json
@@ -41,14 +41,16 @@
             "@fortawesome/fontawesome-svg-core": "^6.5.1",
             "@fortawesome/free-brands-svg-icons": "^6.5.1",
             "@fortawesome/free-solid-svg-icons": "^6.5.1",
-            "@sendgrid/mail": "^7.4.6",
+            "@sendgrid/mail": "^8.1.3",
             "@types/file-type": "^10.9.1",
             "@types/mongodb": "^4.0.7",
             "@types/twilio": "^3.19.3",
+            "amqplib": "^0.10.4",
             "bcrypt": "^5.1.1",
             "clean-css": "^5.3.3",
             "cluster": "^0.7.7",
             "crypto": "latest",
+            "exif-parser": "^0.1.12",
             "fastify-cookie": "^5.7.0",
             "file-type": "^19.0.0",
             "fs": "^0.0.1-security",
@@ -56,7 +58,7 @@
             "mysql2": "^latest",
             "sendgrid": "^5.2.3",
             "terser": "^5.29.2",
-            "twilio": "^3.84.0",
+            "twilio": "^5.0.4",
             "xmldom": "^0.6.0"
       },
       "jest": {
