--- a/package.json
+++ b/package.json
@@ -38,9 +38,11 @@
       },
       "dependencies": {
             "@fastify/cookie": "^9.3.1",
+            "@ffmpeg/ffmpeg": "^0.12.10",
             "@fortawesome/fontawesome-svg-core": "^6.5.1",
             "@fortawesome/free-brands-svg-icons": "^6.5.1",
             "@fortawesome/free-solid-svg-icons": "^6.5.1",
+            "@google-cloud/storage": "^7.11.0",
             "@sendgrid/mail": "^8.1.3",
             "@types/file-type": "^10.9.1",
             "@types/mongodb": "^4.0.7",
@@ -53,6 +55,7 @@
             "exif-parser": "^0.1.12",
             "fastify-cookie": "^5.7.0",
             "file-type": "^19.0.0",
+            "fluent-ffmpeg": "^2.1.2",
             "fs": "^0.0.1-security",
             "kysely": "^0.27.3",
             "mysql2": "^latest",
