--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
       "module": "ES2022",
       "moduleResolution": "node",
       "scripts": {
-            "production": "set NODE_ENV=production && npx tsc",
-            "start": "cls && set NODE_ENV=development && npx tsc && node dist/index.js",
-            "dev": "set NODE_ENV=development && tsx src/index.ts",
-            "test": "cls && jest"
+            "build" : "npx tsc",
+            "start" : "npm run build && node dist/index.dev.js",
+            "prod"  : "tsx src/index.ts",
+            "dev"   : "tsx src/index.dev.ts",
+            "test"  : "jest"
       },
       "keywords": [],
       "author": "Ralph C. Ferrara Jr.",
@@ -19,9 +20,11 @@
             "@types/jest": "^29.5.11",
             "@types/jsdom": "^21.1.6",
             "@types/mysql": "^2.15.24",
-            "@types/node": "^16.18.70",
+            "@types/node": "^16.18.97",
             "@types/ws": "^8.5.10",
             "@types/xmldom": "^0.1.34",
+            "concurrently": "^8.2.2",
+            "cross-env": "^7.0.3",
             "crypto": "^1.0.1",
             "fastify": "^4.26.2",
             "fastify-websocket": "^4.3.0",
@@ -45,6 +48,7 @@
             "@google-cloud/storage": "^7.11.0",
             "@sendgrid/mail": "^8.1.3",
             "@types/file-type": "^10.9.1",
+            "@types/fluent-ffmpeg": "^2.1.24",
             "@types/mongodb": "^4.0.7",
             "@types/twilio": "^3.19.3",
             "amqplib": "^0.10.4",
@@ -59,6 +63,7 @@
             "fs": "^0.0.1-security",
             "kysely": "^0.27.3",
             "mysql2": "^latest",
+            "sharp": "^0.32.6",
             "sendgrid": "^5.2.3",
             "terser": "^5.29.2",
             "twilio": "^5.0.4",
