--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
             "@types/node": "^16.18.97",
             "@types/ws": "^8.5.10",
             "@types/xmldom": "^0.1.34",
-            "concurrently": "^8.2.2",
             "cross-env": "^7.0.3",
             "crypto": "^1.0.1",
+            "depcheck": "^1.4.7",
             "fastify": "^4.26.2",
             "fastify-websocket": "^4.3.0",
             "jest": "^29.7.0",
@@ -53,22 +53,19 @@
             "@types/twilio": "^3.19.3",
             "amqplib": "^0.10.4",
             "bcrypt": "^5.1.1",
-            "canvas": "^2.11.2",
             "chokidar": "^3.6.0",
             "clean-css": "^5.3.3",
             "cluster": "^0.7.7",
             "crypto": "latest",
+            "date-fns": "^3.6.0",
             "exif-parser": "^0.1.12",
             "fastify-cookie": "^5.7.0",
             "file-type": "^19.0.0",
             "fluent-ffmpeg": "^2.1.2",
             "fs": "^0.0.1-security",
-            "gif-encoder": "^0.7.2",
             "gif-frames": "^1.0.1",
-            "kysely": "^0.27.3",
+            "gifencoder": "^2.0.1",
             "mysql2": "^latest",
-            "puppeteer": "^22.10.0",
-            "puppeteer-core": "^22.10.0",
             "sendgrid": "^5.2.3",
             "terser": "^5.29.2",
             "twilio": "^5.0.4",
