--- a/package.json
+++ b/package.json
@@ -17,35 +17,44 @@
       "author": "Ralph C. Ferrara Jr.",
       "license": "MIT",
       "devDependencies": {
-            "@types/jest": "^29.5.11",
+            "@babel/core": "^7.24.7",
+            "@babel/preset-env": "^7.24.7",
+            "@babel/preset-typescript": "^7.24.7",
+            "@types/jest": "^29.5.12",
             "@types/jsdom": "^21.1.6",
             "@types/mysql": "^2.15.24",
             "@types/node": "^16.18.97",
             "@types/ws": "^8.5.10",
-            "@types/xmldom": "^0.1.34",
+            "babel-jest": "^29.7.0",
             "cross-env": "^7.0.3",
             "crypto": "^1.0.1",
             "depcheck": "^1.4.7",
-            "fastify": "^4.26.2",
-            "fastify-websocket": "^4.3.0",
+            "fastify": "^4.27",
             "jest": "^29.7.0",
+            "jest-mock": "^29.7.0",
             "jsdom": "^23.0.1",
             "mongodb": "^6.3.0",
             "mysql2": "latest",
             "redis": "^4.6.11",
             "sharp": "^0.32.6",
-            "ts-jest": "^29.1.1",
+            "ts-jest": "^29.1.4",
             "ts-node": "^10.9.1",
             "typescript": "^5.4.5",
             "ws": "^7.5.9"
       },
       "dependencies": {
+            "@aws-sdk/client-s3": "^3.596.0",
+            "@aws-sdk/client-ses": "^3.596.0",
+            "@aws-sdk/client-sns": "^3.596.0",
+            "@azure/arm-storage": "^18.2.0",
+            "@azure/identity": "^4.2.1",
+            "@azure/storage-blob": "^12.23.0",
             "@fastify/cookie": "^9.3.1",
             "@ffmpeg/ffmpeg": "^0.12.10",
             "@fortawesome/fontawesome-svg-core": "^6.5.1",
             "@fortawesome/free-brands-svg-icons": "^6.5.1",
             "@fortawesome/free-solid-svg-icons": "^6.5.1",
-            "@google-cloud/storage": "^7.11.0",
+            "@google-cloud/storage": "^7.11.2",
             "@sendgrid/mail": "^8.1.3",
             "@types/file-type": "^10.9.1",
             "@types/fluent-ffmpeg": "^2.1.24",
@@ -63,23 +72,10 @@
             "file-type": "^19.0.0",
             "fluent-ffmpeg": "^2.1.2",
             "fs": "^0.0.1-security",
-            "gif-frames": "^1.0.1",
-            "gifencoder": "^2.0.1",
+            "googleapis": "^140.0.0",
             "mysql2": "^latest",
             "sendgrid": "^5.2.3",
             "terser": "^5.29.2",
-            "twilio": "^5.0.4",
-            "xmldom": "^0.6.0"
-      },
-      "jest": {
-            "transform": {
-                  ".(ts|tsx|js)": "ts-jest"
-            },
-            "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx)$",
-            "moduleFileExtensions": [
-                  "ts",
-                  "tsx",
-                  "js"
-            ]
+            "twilio": "^5.0.4"
       }
 }
